--- a/index.html
+++ b/index.html
@@ -9,27 +9,41 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Навигационная панель -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+
+
+    <!-- Главная навигационная панель -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <i class="fas fa-warehouse me-2"></i>
-                Склад-Менеджер
+                <i class="fas fa-warehouse me-2 text-primary"></i>
+                <span class="fw-bold">Склад-Менеджер</span>
             </a>
+            
+            <!-- Поиск в шапке -->
+            <div class="navbar-search me-auto ms-4">
+                <div class="input-group" style="width: 400px;">
+                    <input type="text" class="form-control" placeholder="Поиск позиций..." id="headerSearch">
+                    <button class="btn btn-primary" type="button">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+            </div>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">
-                            <i class="fas fa-home me-1"></i>Главная
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="catalog.html">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-boxes me-1"></i>Каталог
                         </a>
+                        <ul class="dropdown-menu" id="catalogCategoriesDropdown">
+                            <li><a class="dropdown-item" href="catalog.html">Все позиции</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <!-- Категории будут загружены динамически -->
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="history.html">
@@ -41,19 +55,17 @@
                             <i class="fas fa-search me-1"></i>Поиск
                         </a>
                     </li>
-                </ul>
-                <ul class="navbar-nav">
                     <li class="nav-item dropdown" id="adminDropdown" style="display: none;">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
                             <i class="fas fa-cog me-1"></i>Администрирование
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="admin/users.html">Управление пользователями</a></li>
-                            <li><a class="dropdown-item" href="admin/categories.html">Категории товаров</a></li>
+                            <li><a class="dropdown-item" href="admin/categories.html">Категории позиций</a></li>
                             <li><a class="dropdown-item" href="admin/reports.html">Отчеты</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown" id="profileDropdown">
+                    <li class="nav-item dropdown" id="profileDropdown" style="display: none;">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
                             <i class="fas fa-user me-1"></i>Профиль
                         </a>
@@ -68,6 +80,24 @@
         </div>
     </nav>
 
+    <!-- Панель категорий -->
+    <div class="categories-bar bg-light border-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <ul class="nav nav-pills categories-nav" id="categoriesNav">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="index.html">
+                                <i class="fas fa-home me-1"></i>Главная
+                            </a>
+                        </li>
+                        <!-- Категории будут загружены динамически -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Основной контент -->
     <main class="container mt-4">
         <!-- Приветственный блок -->
@@ -79,7 +109,7 @@
                             <i class="fas fa-warehouse me-3"></i>
                             Добро пожаловать в систему управления складом
                         </h1>
-                        <p class="card-text">Эффективное управление товарными запасами и операциями склада</p>
+                        <p class="card-text">Эффективное управление складом деталей и операциями</p>
                     </div>
                 </div>
             </div>
@@ -94,8 +124,8 @@
                 <div class="card h-100 quick-action-card">
                     <div class="card-body text-center">
                         <i class="fas fa-plus-circle fa-3x text-primary mb-3"></i>
-                        <h5 class="card-title">Добавить товар</h5>
-                        <p class="card-text">Добавить новый товар в каталог</p>
+                        <h5 class="card-title">Добавить позицию</h5>
+                        <p class="card-text">Добавить новую позицию в каталог</p>
                         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addItemModal">
                             Добавить
                         </button>
@@ -107,7 +137,7 @@
                     <div class="card-body text-center">
                         <i class="fas fa-box-open fa-3x text-success mb-3"></i>
                         <h5 class="card-title">Приход</h5>
-                        <p class="card-text">Оформить приход товара</p>
+                        <p class="card-text">Оформить приход позиции</p>
                         <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#incomingModal">
                             Оформить
                         </button>
@@ -119,7 +149,7 @@
                     <div class="card-body text-center">
                         <i class="fas fa-truck fa-3x text-warning mb-3"></i>
                         <h5 class="card-title">Расход</h5>
-                        <p class="card-text">Оформить расход товара</p>
+                        <p class="card-text">Оформить расход позиции</p>
                         <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#outgoingModal">
                             Оформить
                         </button>
@@ -131,8 +161,52 @@
                     <div class="card-body text-center">
                         <i class="fas fa-search fa-3x text-info mb-3"></i>
                         <h5 class="card-title">Поиск</h5>
-                        <p class="card-text">Найти товар или операцию</p>
+                        <p class="card-text">Найти позицию или операцию</p>
                         <a href="search.html" class="btn btn-info">Найти</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Дополнительные действия -->
+        <div class="row mb-4">
+            <div class="col-md-3 mb-3">
+                <div class="card h-100 quick-action-card">
+                    <div class="card-body text-center">
+                        <i class="fas fa-user fa-3x text-secondary mb-3"></i>
+                        <h5 class="card-title">Мой профиль</h5>
+                        <p class="card-text">Управление профилем и настройками</p>
+                        <a href="profile.html" class="btn btn-secondary">Открыть</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 mb-3">
+                <div class="card h-100 quick-action-card">
+                    <div class="card-body text-center">
+                        <i class="fas fa-history fa-3x text-dark mb-3"></i>
+                        <h5 class="card-title">История операций</h5>
+                        <p class="card-text">Просмотр истории всех операций</p>
+                        <a href="history.html" class="btn btn-dark">Просмотреть</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 mb-3">
+                <div class="card h-100 quick-action-card">
+                    <div class="card-body text-center">
+                        <i class="fas fa-boxes fa-3x text-primary mb-3"></i>
+                        <h5 class="card-title">Каталог позиций</h5>
+                        <p class="card-text">Просмотр и управление позициями</p>
+                        <a href="catalog.html" class="btn btn-primary">Открыть</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 mb-3">
+                <div class="card h-100 quick-action-card">
+                    <div class="card-body text-center">
+                        <i class="fas fa-cog fa-3x text-warning mb-3"></i>
+                        <h5 class="card-title">Администрирование</h5>
+                        <p class="card-text">Управление системой и пользователями</p>
+                        <a href="admin/categories.html" class="btn btn-warning">Управлять</a>
                     </div>
                 </div>
             </div>
@@ -149,7 +223,7 @@
                         <div class="d-flex justify-content-between">
                             <div>
                                 <h4 class="card-title" id="totalItems">0</h4>
-                                <p class="card-text">Всего товаров</p>
+                                <p class="card-text">Всего позиций</p>
                             </div>
                             <i class="fas fa-boxes fa-2x"></i>
                         </div>
@@ -247,7 +321,7 @@
                     <form id="addItemForm">
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                <label for="itemName" class="form-label">Название товара *</label>
+                                <label for="itemName" class="form-label">Название позиции *</label>
                                 <input type="text" class="form-control" id="itemName" required>
                             </div>
                             <div class="col-md-6 mb-3">
@@ -305,9 +379,9 @@
                 <div class="modal-body">
                     <form id="incomingForm">
                         <div class="mb-3">
-                            <label for="incomingItem" class="form-label">Товар *</label>
+                            <label for="incomingItem" class="form-label">Позиция *</label>
                             <select class="form-select" id="incomingItem" required>
-                                <option value="">Выберите товар</option>
+                                <option value="">Выберите позицию</option>
                             </select>
                         </div>
                         <div class="mb-3">
@@ -348,9 +422,9 @@
                 <div class="modal-body">
                     <form id="outgoingForm">
                         <div class="mb-3">
-                            <label for="outgoingItem" class="form-label">Товар *</label>
+                            <label for="outgoingItem" class="form-label">Позиция *</label>
                             <select class="form-select" id="outgoingItem" required>
-                                <option value="">Выберите товар</option>
+                                <option value="">Выберите позицию</option>
                             </select>
                         </div>
                         <div class="mb-3">
@@ -383,7 +457,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>Система управления складом</h5>
-                    <p class="mb-0">Эффективное управление товарными запасами</p>
+                    <p class="mb-0">Эффективное управление складом деталей</p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <p class="mb-0">&copy; 2025 Склад-Менеджер. Все права защищены.</p>
