--- a/history.html
+++ b/history.html
@@ -9,51 +9,63 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Навигационная панель -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+
+
+    <!-- Главная навигационная панель -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <i class="fas fa-warehouse me-2"></i>
-                Склад-Менеджер
+                <i class="fas fa-warehouse me-2 text-primary"></i>
+                <span class="fw-bold">Склад-Менеджер</span>
             </a>
+            
+            <!-- Поиск в шапке -->
+            <div class="navbar-search me-auto ms-4">
+                <div class="input-group" style="width: 400px;">
+                    <input type="text" class="form-control" placeholder="Поиск позиций..." id="headerSearch">
+                    <button class="btn btn-primary" type="button">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+            </div>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">
                             <i class="fas fa-home me-1"></i>Главная
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="catalog.html">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-boxes me-1"></i>Каталог
                         </a>
+                        <ul class="dropdown-menu" id="catalogCategoriesDropdown">
+                            <li><a class="dropdown-item" href="catalog.html">Все позиции</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <!-- Категории будут загружены динамически -->
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="history.html">
                             <i class="fas fa-history me-1"></i>История
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="search.html">
-                            <i class="fas fa-search me-1"></i>Поиск
-                        </a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav">
                     <li class="nav-item dropdown" id="adminDropdown" style="display: none;">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
                             <i class="fas fa-cog me-1"></i>Администрирование
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="admin/users.html">Управление пользователями</a></li>
-                            <li><a class="dropdown-item" href="admin/categories.html">Категории товаров</a></li>
+                            <li><a class="dropdown-item" href="admin/categories.html">Категории позиций</a></li>
                             <li><a class="dropdown-item" href="admin/reports.html">Отчеты</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown" id="profileDropdown">
+                    <li class="nav-item dropdown" id="profileDropdown" style="display: none;">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
                             <i class="fas fa-user me-1"></i>Профиль
                         </a>
@@ -67,6 +79,24 @@
             </div>
         </div>
     </nav>
+
+    <!-- Панель категорий -->
+    <div class="categories-bar bg-light border-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <ul class="nav nav-pills categories-nav" id="categoriesNav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">
+                                <i class="fas fa-home me-1"></i>Главная
+                            </a>
+                        </li>
+                        <!-- Категории будут загружены динамически -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Основной контент -->
     <main class="container mt-4">
