--- a/admin/categories.html
+++ b/admin/categories.html
@@ -107,7 +107,7 @@
                         <p class="text-muted mb-0">Создание и редактирование категорий позиций</p>
                     </div>
                     <div class="d-flex gap-2">
-                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCategoryModal">
+                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCategoryModal" id="addCategoryBtn" data-role="manager">
                             <i class="fas fa-plus me-1"></i>Добавить категорию
                         </button>
                     </div>
