--- a/index.html
+++ b/index.html
@@ -120,37 +120,37 @@
             <div class="col-12">
                 <h2 class="mb-3">Быстрые действия</h2>
             </div>
-            <div class="col-md-3 mb-3">
+            <div class="col-md-3 mb-3" data-role="manager">
                 <div class="card h-100 quick-action-card">
                     <div class="card-body text-center">
                         <i class="fas fa-plus-circle fa-3x text-primary mb-3"></i>
                         <h5 class="card-title">Добавить позицию</h5>
                         <p class="card-text">Добавить новую позицию в каталог</p>
-                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addItemModal">
+                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addItemModal" id="addItemBtn">
                             Добавить
                         </button>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-3">
+            <div class="col-md-3 mb-3" data-role="manager">
                 <div class="card h-100 quick-action-card">
                     <div class="card-body text-center">
                         <i class="fas fa-box-open fa-3x text-success mb-3"></i>
                         <h5 class="card-title">Приход</h5>
                         <p class="card-text">Оформить приход позиции</p>
-                        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#incomingModal">
+                        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#incomingModal" id="incomingBtn">
                             Оформить
                         </button>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-3">
+            <div class="col-md-3 mb-3" data-role="manager">
                 <div class="card h-100 quick-action-card">
                     <div class="card-body text-center">
                         <i class="fas fa-truck fa-3x text-warning mb-3"></i>
                         <h5 class="card-title">Расход</h5>
                         <p class="card-text">Оформить расход позиции</p>
-                        <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#outgoingModal">
+                        <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#outgoingModal" id="outgoingBtn">
                             Оформить
                         </button>
                     </div>
@@ -200,7 +200,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-3">
+            <div class="col-md-3 mb-3" data-role="admin">
                 <div class="card h-100 quick-action-card">
                     <div class="card-body text-center">
                         <i class="fas fa-cog fa-3x text-warning mb-3"></i>
