--- a/profile.html
+++ b/profile.html
@@ -164,9 +164,12 @@
                             <button class="btn btn-outline-secondary btn-sm" onclick="profileManager.editProfile()">
                                 <i class="fas fa-edit me-1"></i>Редактировать профиль
                             </button>
-                            <button class="btn btn-outline-info btn-sm" onclick="profileManager.viewActivity()">
-                                <i class="fas fa-chart-line me-1"></i>Моя активность
-                            </button>
+                                                         <button class="btn btn-outline-info btn-sm" onclick="profileManager.viewActivity()">
+                                 <i class="fas fa-chart-line me-1"></i>Моя активность
+                             </button>
+                             <button class="btn btn-outline-success btn-sm" onclick="profileManager.generateWeeklyReport()">
+                                 <i class="fas fa-file-alt me-1"></i>Сгенерировать отчет
+                             </button>
                         </div>
                     </div>
                 </div>
@@ -289,24 +292,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <h6>Интерфейс</h6>
-                                <div class="mb-3">
-                                    <label for="themeSelect" class="form-label">Тема оформления</label>
-                                    <select class="form-select" id="themeSelect">
-                                        <option value="light">Светлая</option>
-                                        <option value="dark">Темная</option>
-                                        <option value="auto">Автоматически</option>
-                                    </select>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="languageSelect" class="form-label">Язык</label>
-                                    <select class="form-select" id="languageSelect">
-                                        <option value="ru">Русский</option>
-                                        <option value="en">English</option>
-                                    </select>
-                                </div>
-                            </div>
+
                         </div>
                         <div class="mt-3">
                             <button class="btn btn-primary" onclick="profileManager.saveSettings()">
